--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="keywords" content="vue.js, wms, vue2, 后台模板, 管理系统, element" />
     <meta name="description" content="基于Vue2 + Element UI 的后台管理系统解决方案" />
+    <script src="http://webapi.amap.com/maps?v=1.3&key=70d7bf19a3d97be874adc1b3b76a07a8"></script>
+    <script src="http://webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
+    <script src="http://cdn-hangzhou.goeasy.io/goeasy.js"></script>
 </head>
 <body>
 <div id="app"></div>
@@ -15,7 +18,7 @@
     (function() {
       var hm = document.createElement("script");
       hm.src = "https://hm.baidu.com/hm.js?1c343a080809502ac823823ae4c9ffe3";
-      var s = document.getElementsByTagName("script")[0]; 
+      var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
 </script> -->
